# XOXO

./: CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  Main.cpp  README.md  XXXOOO.pro  board.cpp  board.h  historydialog.cpp  historydialog.h  historydialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  test.h  test_board.cpp  test_board.h
idk yet/: moc_mainwindow.cpp
